--- a/html/historyCatgory.html
+++ b/html/historyCatgory.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="css3特效，3D相册展示">
   <meta name="Description" content="基于jQuery结合css3实现的3D相册展示特效，新颖别致。兼容360、FireFox、Chrome、Safari、Opera等主流浏览器，不支持IE9及以下浏览器。">
-  <title>jQuery结合css3实现的苹果相册展示特效</title>
+  <title>深圳历史相册</title>
   <link rel="stylesheet" href="../css/demo.css">
  </head>
  <body>
