--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>购物网站</title>
+	<title>网购大蛋糕为深圳40岁庆生</title>
 	 <!-- 引入的  初识化css   fullpage css -->
 	 <link rel="stylesheet" href="css/base.css" />
 	 <!-- 引入自己的css  -->
