--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
 	<meta charset="UTF-8">
   <title>网购大蛋糕为深圳40岁庆生</title>
+  
+  <!-- 引入的  初识化css   fullpage css -->
+  <link rel="stylesheet" href="css/base.css" />
+  <!-- 引入自己的css  -->
+  <link rel="stylesheet" href="css/mypage.css" />
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/jquery.fullPage.css" />
+  <!-- 这是一个jquery插件，所以先引入jquery -->
+  <script src="js/jquery.min.js"></script>
+  <!-- 如果想要 easing 缓动动画  那就引入 easing js -->
+  <script src="js/jquery.easing.1.3.js"></script>
+  <script src="js/jquery.fullPage.min.js"></script>
+  <!-- 引入自己的js -->
+  <script src="js/myPage.js"></script>
   <!-- 设置小图标 -->
-  <link rel="icon" href="../favicon.ico" type="image/x-icon">
-	 <!-- 引入的  初识化css   fullpage css -->
-	 <link rel="stylesheet" href="css/base.css" />
-	 <!-- 引入自己的css  -->
-   <link rel="stylesheet" href="css/mypage.css" />
-   <link rel="stylesheet" href="css/style.css">
-	 <link rel="stylesheet" href="css/jquery.fullPage.css" />
-	 <!-- 这是一个jquery插件，所以先引入jquery -->
-	 <script src="js/jquery.min.js"></script>
-	  <!-- 如果想要 easing 缓动动画  那就引入 easing js -->
-	 <script src="js/jquery.easing.1.3.js"></script>
-	 <script src="js/jquery.fullPage.min.js"></script>
-	 <!-- 引入自己的js -->
-   <script src="js/myPage.js"></script>
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
    
    
 </head>
