--- a/html/historyCatgory.html
+++ b/html/historyCatgory.html
@@ -6,7 +6,7 @@
   <meta name="Description" content="基于jQuery结合css3实现的3D相册展示特效，新颖别致。兼容360、FireFox、Chrome、Safari、Opera等主流浏览器，不支持IE9及以下浏览器。">
   <title>深圳历史相册</title>
   <!-- 设置图标 -->
-  <link rel="icon" href="../favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../css/demo.css">
  </head>
  <body>
