--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-  <title>网购大蛋糕为深圳40岁庆生</title>
+  <title>网购大蛋糕赠深圳</title>
   
   <!-- 引入的  初识化css   fullpage css -->
   <link rel="stylesheet" href="css/base.css" />
@@ -18,7 +18,7 @@
   <!-- 引入自己的js -->
   <script src="js/myPage.js"></script>
   <!-- 设置小图标 -->
-  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./favicon.ico">
    
    
 </head>
